--- a/css/home_works.css
+++ b/css/home_works.css
@@ -180,7 +180,7 @@
 .time_block {
     display: flex;
     width: 500px;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .stopwatch {
