--- a/css/style.css
+++ b/css/style.css
@@ -2,16 +2,19 @@
 
 .header {
     height: 80px;
-    background: #2c2d2f;
+    /* background: #000000;  */
     display: flex;
+    margin-top: -110px;
     align-items: center;
     width: 100%;
-    position: fixed;
+    /* position: fixed;
     top: 0;
-    z-index: 2;
+    z-index: 2; */
+    margin-bottom: 100px;
 }
 
 .inner_header {
+    margin-top: 60px;
     height: 100%;
     display: flex;
     align-items: center;
@@ -21,17 +24,31 @@
 /* LOGOTYPE */
 
 .logotype {
-    display: flex;
+    /* display: flex;
     align-items: center;
-    justify-content: center;
-    font-size: 22px;
-    height: 60px;
-    width: fit-content;
-    background: var(--orange);
-    padding: 8px;
+    justify-content: center; */
+    font-size: 25px;
+    /* height: 60px; */
+    /* width: fit-content; */
+    /* background: var(--orange); */
+    /* padding: 8px; */
     color: white;
-    border-radius: 5px;
+    /* border-radius: 5px; */
     cursor: pointer;
+    font-weight: 900;
+    letter-spacing: 5.104px;
+    text-transform: uppercase;
+    position: relative;
+    z-index: 2;
+    margin-right: 146px;
+}
+
+.filter{
+    color: #D37015;
+    filter: blur(15px);
+    position: absolute;
+    top: 45px;
+    z-index: 0;
 }
 
 /* HEADER MENU */
@@ -45,30 +62,126 @@
 .menu_link a {
     color: var(--orange);
     text-transform: uppercase;
+    transition: 0.3s;
 }
 
 .menu_link a:hover {
-    text-decoration: underline;
+    text-shadow: 0 0 10px #fff;
 }
 
 /* MAIN BLOCK */
 
 .main_block {
     padding: 100px 0;
-    background: black;
+    background-color: #000;
+    background-image: url(../images/background-image.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.inner_main{
+   display: flex; 
+}
+
+.description{
+    margin-top: 28px;
+    margin-bottom: 20px;
+    color: #FFF;
+    font-size: 20px;
+    font-weight: 400;
+    width: 550px;
+    opacity: 0.6;
+}
+
+.title-buttons{
+    display: flex;
+    gap: 15px;
+    width: 407px;
+}
+
+.title-button:last-child{
+    background: #000000;
+    color: #D37015;
+    border: 1px solid #D37015;
+}
+
+.title-button:last-child:hover{
+    background: #D37015;
+    color: #FFF;
+    border: none;
+}
+
+/* VIDEO BLOCK */
+
+.block_video {
+    /* background: black;
+    padding: 100px 0; */
+    margin-top: 40px;
+}
+
+.inner_block_video {
+    /* display: flex; */
+    /* justify-content: center;
+    margin-top: 50px; */
+    width: 454px;
+    padding: 18px 16px 25px 18px;
+    background-color: rgba(35, 35, 35, 0.4);
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.inner_block_video:hover{
+    background-color: rgba(60, 60, 60, 0.4);
+}
+
+.inner_block_video span{
+    color: #FFF;
+    font-size: 25.522px;
+    font-weight: 900;
+    letter-spacing: 5.104px;
+    text-transform: uppercase;
+}
+
+.inner_block_video p{
+    font-size: 20px;
+    font-weight: 400;
+    color: #FFF;
+}
+
+.styled-video{
+    width: 420px;
+    height: 263px;
+    border: none;
+    margin-bottom: 17px;
 }
 
 /* BUTTONS COLOR PICKER */
 
 .colors-buttons {
     display: flex;
-    justify-content: space-between;
-    margin-top: 50px;
+    flex-direction: column; 
+    justify-content: flex-start;
+    gap: 40px;
 }
 
 .btn-color {
-    border-radius: 20px;
-    border-color: white !important;
+    width: 70px;
+    height: 70px;
+    color: #D37015;
+    border-radius: 50%;
+    background-color: #000000;
+    border: 1px solid #D37015;
+    /* border-color: white !important; */
+    cursor: pointer;
+    transition: 1.2s;
+}
+
+.btn-color:hover {
+    color: #FFF;
+    border-radius: 50%;
+    background-color: #D37015;
+    border: none;
+    /* border-color: white !important; */
 }
 
 /* FOOTER */
@@ -95,21 +208,71 @@
 /* SLIDER BLOCK */
 
 .slider_block {
+    height: 786px;
+    margin-top: -29px;
     padding: 100px 0;
-    background: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+#prev{
+    position: absolute;
+    left: 20px;
+    top: 393px;
+}
+
+#next{
+    position: absolute;
+    right: 20px;
+    top: 393px;
+}
+
+.btn-slide {
+    display: block;
+    width: 71px;
+    height: 71px;
+    border: none;
+    background: #D479FF;
+    color: white;
+    font-size: 20px;
+    text-transform: uppercase;
+    border-radius: 50%;
+    font-weight: 800;
+    z-index: 1;
+}
+
+.btn-slide:hover {
+    background: #9353b0 !important;
+    cursor: pointer;
 }
 
 .slider {
     position: relative;
-    width: 100%;
-    height: 300px;
+    width: 1200px;
+    margin: 0 auto;
+    height: 374px;
     overflow: hidden;
-    border: 3px solid var(--orange);
-    border-radius: 20px;
+    /* border: 3px solid var(--orange); */
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 30px;
+}
+
+
+.slider-title{
+    position: absolute;
+    top: 100px; 
+    width: 550px;
+    color: #FFF;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.slider-title span {
+    color: #D479FF;
 }
 
 .slide {
@@ -123,10 +286,18 @@
 }
 
 .slide_card {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     color: white;
+    /* width: 100%; */
     margin: 0 auto;
-    width: 500px;
     text-align: center;
+}
+
+.slide_card img{
+    width: 588px;
+    height: 374px;
 }
 
 .slide_card h3 {
@@ -139,6 +310,8 @@
     font-size: 16px;
     text-align: justify;
     margin: 10px 0;
+    width: 550px;
+    opacity: 0.6;
 }
 
 .slide_card a {
@@ -148,19 +321,6 @@
 
 .slide.active_slide {
     display: block;
-}
-
-/* VIDEO BLOCK */
-
-.block_video {
-    background: black;
-    padding: 100px 0;
-}
-
-.inner_block_video {
-    display: flex;
-    justify-content: center;
-    margin-top: 50px;
 }
 
 /* MODAL */
