--- a/css/characters.css
+++ b/css/characters.css
@@ -3,13 +3,9 @@
 *{
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
-    background-color: #000;
 }
-.inner_header, ul.menu, a{
-    background: #2c2d2f;
-}
-.logotype h2, h2 span{
-    background: var(--orange);
+.header{
+    margin-top: -10px;
 }
 .characters{
     display: flex;
@@ -20,6 +16,7 @@
     padding-bottom: 80px;
 }
 .logo{
+    margin-top: -100px;
     display: flex;
     align-items: center;
     justify-content: center;
